[package]
name = "payment_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
clap = { version = "3.1.6", features = ["derive"] }
rust_decimal = "1.22"
rust_decimal_macros = "1.22"